Revision history for UFL-WebAdmin-SiteDeploy

0.11
        - Update logging format to make command output easier to read

0.10  Tue Dec  9 17:45:15 EST 2008
        - Force stringification on SVN::Notify::Config URI to make
          Subversion 1.5 API happy

0.09  Fri Aug 15 17:43:42 EDT 2008
        - Remove 'requires' declarations in the roles since Moose
          can't see the accessors generated by
          SVN::Notify::register_attributes

0.08  Mon Aug 11 17:24:24 EDT 2008
        - Add logging of SVN::Notify::Mirror command output to attempt
          to catch problems

0.07  Thu Jun 19 15:54:23 EDT 2008
        - Refactor common defaults to
          UFL::WebAdmin::SiteDeploy::TestRepository
        - Declare required attributes as such to make initialization
          errors obvious
        - Remove UFL::WebAdmin::SiteDeploy::Repository and related
          modules in favor of VCI

0.06  Thu Jun 12 14:06:44 EDT 2008
        - Refactor deployment code
        - Add deploy method to UFL::WebAdmin::SiteDeploy::Site
        - Add entries method to UFL::WebAdmin::SiteDeploy::Repository

0.05  Wed Jun 11 17:17:03 EDT 2008
        - Refactor tests
        - Add deploy_site method to
          UFL::WebAdmin::SiteDeploy::Repository for push-button
          deployment

0.04  Thu Jun  5 17:00:14 EDT 2008
        - Improve on tag handling of SVN::Notify::Mirror (changes
          configuration parameter from tag_regex to tag_pattern)
        - Refactor SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
          Moose roles
        - Rename SVN::Notify::Mirror::Rsync::AutoCreateCheckout to
          SVN::Notify::Mirror::Rsync::AutoCheckout
        - Add logging of mirror operations using Log::Log4perl
        - Convert ufl_webadmin_sitedeploy_update_site.sh to a more
          flexible system using MooseX::App::Cmd

0.03  Mon Mar 31 19:31:33 EDT 2008
        - Add dependencies on the explicit path of binaries used in
          the scripts
        - Update Trac URL