@@ -2,6 +2,8 @@ Revision history for UFL-WebAdmin-SiteDeploy
 
 0.11
         - Update logging format to make command output easier to read
+        - Rename CommitLogger to LogCommit for consistency with other
+          roles
 
 0.10  Tue Dec  9 17:45:15 EST 2008
         - Force stringification on SVN::Notify::Config URI to make
